WIP: 翻訳ファイル作成｜履歴まで

--- a/app/views/bookmarks/popup_edit.html.slim
+++ b/app/views/bookmarks/popup_edit.html.slim
@@ -1,4 +1,4 @@
-- content_for :title, "Edit"
+- content_for :title, t('dictionary.title.edit')
 
 #app
   = render "shared/navbar"
@@ -14,8 +14,9 @@
               = image_tag "https://dummyimage.com/600x400/e6e6e6/cccccc.png&text=+NO+IMAGE"
           = f.file_field :og_image_url, id: 'site-image-select', class: 'd-none', '@change': 'submitSiteImageEdit'
           .mt-3
-            = link_to 'Take a capture', take_capture_path(id: @bookmark.id), class: 'btn btn-sm btn-outline-primary mr-2', remote: true
-            button.btn.btn-sm.btn-outline-primary @click="siteImageSelect" Upload
+            = link_to t('dictionary.button.take-capture'), take_capture_path(id: @bookmark.id), class: 'btn btn-sm btn-outline-primary mr-2', remote: true
+            button.btn.btn-sm.btn-outline-primary @click="siteImageSelect"
+              = t('dictionary.button.upload')
 
           = hidden_field_tag :popup, true
           = hidden_field_tag :site_image_edit, true
@@ -58,11 +59,11 @@
 
           .d-flex.mt-3
             div.mr-auto
-              = link_to 'Create folder', 'javascript:void(0)', class: 'btn btn-outline-primary', id: 'new-folder', 'v-on:click': "show_new_folder(#{@main_folder_id.to_json})"
+              = link_to t('dictionary.button.create-folder'), 'javascript:void(0)', class: 'btn btn-outline-primary', id: 'new-folder', 'v-on:click': "show_new_folder(#{@main_folder_id.to_json})"
             div.mr-2
-              = link_to 'Cancel', 'javascript:window.close()', class: 'btn btn-outline-primary'
+              = link_to t('dictionary.button.cancel'), 'javascript:window.close()', class: 'btn btn-outline-primary'
             div
-              = f.submit "Save", class: 'btn btn-primary'
+              = f.submit class: 'btn btn-primary'
 
 = javascript_pack_tag 'bookmark'
 = stylesheet_pack_tag 'bookmark'
