--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -2,11 +2,11 @@
   .row.justify-content-between.m-0
     .text-left.text-white.p-3
       a.text-white.mr-3 href="https://www.hippohack.me/" target="_blank" hippohack.me
-      a.text-white.mr-3 href="https://blog.hippohack.me/" target="_blank" Blogs
+      a.text-white.mr-3 href="https://blog.hippohack.me/" target="_blank" = t('footer.blog')
       a.patreon-btn.text-white.mr-3.btn.btn-outline-info.btn-sm href="https://www.patreon.com/hippohack" target="_blank" Patreon
     .text-right.text-white.p-3
-      a.text-white.mr-3 href="#{ url_for(release_notes_path) }" Release notes
-      a.text-white.mr-3 href="https://twitter.com/hippohack" target="_blank" Please give feedback
+      a.text-white.mr-3 href="#{ url_for(release_notes_path) }" = t('footer.release-note')
+      a.text-white.mr-3 href="https://twitter.com/hippohack" target="_blank" = t('footer.feedback')
       / a.text-white.mr-3 href="#TODO:" Terms of Service
       / a.text-white.mr-3 href="#TODO:" Privacy
       / a.text-white.mr-3 href="#TODO:" Cookies
