--- a/app/views/settings/edit.html.slim
+++ b/app/views/settings/edit.html.slim
@@ -16,7 +16,7 @@
                   = hidden_field_tag "setting[#{index}][key]", setting.key
                   / TODO: Make collection record
                   = select_tag "setting[#{index}][value]", options_for_select([['Japanese', 'Japanese'], ['English', 'English']], setting.value), class: 'form-control'
-              - if setting.key == 'item_sort'
+              - elsif setting.key == 'item_sort'
                 .form-group
                   = label_tag setting.key, nil
                   = hidden_field_tag "setting[#{index}][key]", setting.key
