--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -47,6 +47,7 @@ nav.navbar.navbar-light.bg-dark
           / = link_to 'Manage Bookmarks', '#TODO:', class: 'dropdown-item'
           = link_to t('nav.import'), import_path, class: 'dropdown-item'
           / = link_to 'Export Bookmarks', '#TODO:', class: 'dropdown-item'
+          a.dropdown-item href='javascript: (function () { var a = window, b = document, c = encodeURIComponent, d = a.open("#{ ENV.fetch("HOMEURL") }/bookmarks/new?op=edit&output=popup&bkmk=" + c(b.location) + "&title=" + c(b.title), "bkmk_popup", "left=" + ((a.screenX || a.screenLeft) + 700) + ",top=" + ((a.screenY || a.screenTop) + 10) + ",height=810px,width=600px,resizable=1,alwaysRaised=1"); a.setTimeout(function () { d.focus() }, 300) })();' Bookmarklet
           hr.my-1
           a.dropdown-item href="#{ edit_account_registration_path }" = t('nav.account-setting')
           a.dropdown-item href="#{ settings_path }" = t('nav.system-setting')
