Change: ブックマーレットの表示設定

--- a/app/views/settings/edit.html.slim
+++ b/app/views/settings/edit.html.slim
@@ -21,7 +21,7 @@
                   = label_tag setting.key, nil
                   = hidden_field_tag "setting[#{index}][key]", setting.key
                   = select_tag "setting[#{index}][value]", options_from_collection_for_select(SortMaster.all, 'slug', 'name', setting.value), class: 'form-control'
-              - elsif setting.key == 'show_many_visits' || setting.key == 'show_history'
+              - elsif setting.key == 'show_many_visits' || setting.key == 'show_history' || setting.key == 'show_bookmarklet'
                 .form-group
                   = label_tag setting.key, nil, for: ''
                   .form-check
