--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -14,6 +14,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v071" 2020/01/27（v0.7.1）
+              li
                 a href="#v070" 2020/01/25（v0.7.0）
               li
                 a href="#v060" 2020/01/18（v0.6.0）
@@ -34,7 +36,14 @@
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v070.release-notes__content.mt-0
+          #v071.release-notes__content.mt-0
+            h2 2020/01/27（v0.7.1）
+            p Has been updated.
+            h3 Fixed
+            ul
+              li Unable to access site without authentication.
+
+          #v070.release-notes__content.mt-5
             h2 2020/01/25（v0.7.0）
             p Has been updated.
             h3 Updated
