--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -14,6 +14,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v072" 2020/02/10（v0.7.2）
+              li
                 a href="#v071" 2020/01/27（v0.7.1）
               li
                 a href="#v070" 2020/01/25（v0.7.0）
@@ -37,6 +39,14 @@
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
           #v071.release-notes__content.mt-0
+            h2 2020/02/10（v0.7.2）
+            p Has been updated.
+            h3 Fixed
+            ul
+              li Adjusted favicon acquisition process.
+              li Adjusted the folder to be displayed on the folder selection screen.
+
+          #v071.release-notes__content.mt-5
             h2 2020/01/27（v0.7.1）
             p Has been updated.
             h3 Fixed
