--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -2,15 +2,22 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: #111;
-  opacity: 0.5;
+  background-color: rgba(1, 1, 1, 0.5);
   top: 0;
 
   &__loading {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
-    color: #fff;
+    // color: #fff;
+  }
+
+  &__note {
+    background-color: #fff;
+    padding: 40px;
+    border-radius: 5px;
+    box-shadow: 1px 1px 0 0 #ccc;
   }
 }
