Change: 不要コード削除。

--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -14,6 +14,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v080" 2020/02/15（v0.8.0）
+              li
                 a href="#v072" 2020/02/10（v0.7.2）
               li
                 a href="#v071" 2020/01/27（v0.7.1）
@@ -38,7 +40,15 @@
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v071.release-notes__content.mt-0
+          #v080.release-notes__content.mt-0
+            h2 2020/02/15（v0.8.0）
+            p Has been updated.
+            h3 Updated
+            ul
+              li <strong>Try Demo: </strong>You can now log in with a demo account.
+              li Minor corrections.
+
+          #v072.release-notes__content.mt-5
             h2 2020/02/10（v0.7.2）
             p Has been updated.
             h3 Fixed
