--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <title><%= yield(:title) %> | HippoMarks</title>
+    <% if !is_welcome  %>
+      <title><%= yield(:title) %> | HippoMarks</title>
+    <% end  %>  
+    <%= display_meta_tags(default_meta_tags) if is_welcome %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
