--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -14,6 +14,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v090" 2020/02/22（v0.9.0）
+              li
                 a href="#v080" 2020/02/15（v0.8.0）
               li
                 a href="#v072" 2020/02/10（v0.7.2）
@@ -40,7 +42,14 @@
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v080.release-notes__content.mt-0
+          #v090.release-notes__content.mt-0
+            h2 2020/02/22（v0.9.0）
+            p Has been updated.
+            h3 Updated
+            ul
+              li <strong>OGP: </strong>Added OGP settings.
+          
+          #v080.release-notes__content.mt-5
             h2 2020/02/15（v0.8.0）
             p Has been updated.
             h3 Updated
