Change: リリースノート更新。

--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -48,6 +48,7 @@
             h3 Updated
             ul
               li <strong>OGP: </strong>Added OGP settings.
+              li <strong>Many Visits and History: </strong>You can now set the number to display.
           
           #v080.release-notes__content.mt-5
             h2 2020/02/15（v0.8.0）
