--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,6 +11,11 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%#= render "devise/shared/error_messages", resource: resource %>
 
+        <% if resource.uid.present? %>
+          <h5><span class="badge badge-info">You are logged in with your <%= resource.provider.capitalize %> account</span></h5>
+        <% end %>
+        
+        <% if resource.uid.blank? %>
         <div class="form-group">
           <%= f.label :email %>
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
@@ -59,6 +64,7 @@
           <%= link_to "Cancel", root_path, class: 'btn btn-outline-secondary mr-2' %>
           <%= f.submit "Update", class: 'btn btn-primary' %>
         </div>
+      <% end %>
       <% end %>
 
       <h3 class="mt-5">Cancel my account</h3>
