Change: ログインボタン調整。

--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -35,6 +35,17 @@
       margin-right: 5px;
     }
   }
+
+  &__twitter {
+    color: #1da1f2;
+    font-weight: bold;
+
+    img {
+      border-radius: 100%;
+      width: 40px;
+      margin-right: 5px;
+    }
+  }
 }
 
 .or {
