--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,8 +8,8 @@
     <h2><%= yield(:title) %></h2>
 
     <div class="oauth-login text-center">
-      <a class="oauth-login__patreon mr-4" href="https://www.patreon.com/oauth2/authorize?response_type=code&client_id=<%= ENV.fetch('PATREON_CLIENT_ID') %>
-      &redirect_uri=<%= accounts_auth_patreon_callback_url %>">
+      <a class="oauth-login__patreon mr-4"
+        href="https://www.patreon.com/oauth2/authorize?response_type=code&client_id=<%= ENV.fetch('PATREON_CLIENT_ID') %>&redirect_uri=<%= accounts_auth_patreon_callback_url %>">
         <img src="<%= image_url('Patreon_Mark_Coral.jpg') %>">
         <span>Log in with Patreon</span>
       </a>
