--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -7,13 +7,13 @@
       .text-center.py-2.d-flex.justify-content-center
         p.m-0
           = "#{t('bookmarklet')}:"
-          a.btn.btn-sm.btn-info.ml-2 href='javascript: (function () { var a = window, b = document, c = encodeURIComponent, d = a.open("#{ ENV.fetch("HOMEURL") }/bookmarks/new?op=edit&output=popup&bkmk=" + c(b.location) + "&title=" + c(b.title), "bkmk_popup", "left=" + ((a.screenX || a.screenLeft) + 700) + ",top=" + ((a.screenY || a.screenTop) + 10) + ",height=810px,width=600px,resizable=1,alwaysRaised=1"); a.setTimeout(function () { d.focus() }, 300) })();' = t('dictionary.button.bookmark')
+          a.btn.btn-sm.btn-info.ml-2 href='javascript: (function () { var a = window, b = document, c = encodeURIComponent, d = a.open("#{ root_url }bookmarks/new?op=edit&output=popup&bkmk=" + c(b.location) + "&title=" + c(b.title), "bkmk_popup", "left=" + ((a.screenX || a.screenLeft) + 700) + ",top=" + ((a.screenY || a.screenTop) + 10) + ",height=810px,width=600px,resizable=1,alwaysRaised=1"); a.setTimeout(function () { d.focus() }, 300) })();' = t('dictionary.button.bookmark')
         a.close.bookmarklet__close @click="hideBookmarklet" href="#{ url_for(hide_bookmarklet_path) }" data-method="patch"
           span ×
   = render "shared/flash"
   .container-fluid
     main.main.bookmarks
-      bookmark-layout :_top_folder="#{ @top_folder.to_json }" :_folder_items="#{ @top_folder_children.to_json }" :_home_url="#{ ENV.fetch('HOMEURL').to_json }" :_settings="#{ current_account.settings.to_json }" :_show_item_menu="show_item_menu" :_show_item_menu_id="show_item_menu_id" :_sort_setting="#{ @sort_setting.to_json }"
+      bookmark-layout :_top_folder="#{ @top_folder.to_json }" :_folder_items="#{ @top_folder_children.to_json }" :_home_url="#{ root_url.to_json }" :_settings="#{ current_account.settings.to_json }" :_show_item_menu="show_item_menu" :_show_item_menu_id="show_item_menu_id" :_sort_setting="#{ @sort_setting.to_json }"
 
 = render "shared/footer"
 
