Change: become a patronボタン設置。

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -442,3 +442,13 @@ main {
     }
   }
 }
+
+.be-patron {
+  text-align: center;
+  padding: 10px;
+  padding-bottom: 7px;
+  
+  img {
+    width: 170px;
+  }
+}
