Change: リリースノート更新。

--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -51,6 +51,7 @@
             ul
               li <strong>Login: </strong>Added social login function. However, patreon login may be deleted. Please note that if you have created a patreon account with social login, you will not be able to login with a patreon account on this site.
               li <strong>Take capture: </strong>Limited the ability to capture site captures to supporters only.
+              li "Become a patron" button was installed. Thank you very much.
           
           #v090.release-notes__content.mt-5
             h2 2020/02/22（v0.9.0）
