--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -65,6 +65,10 @@
               <% end %>
             </tbody>
           </table>
+
+          <div class="d-flex justify-content-center my-5">
+            <%= will_paginate @histories, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer %>
+          </div>
         <% end %>
       </div>
     </div>
