--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -53,6 +53,7 @@
               li <strong>Take capture: </strong>Limited the ability to capture site captures to supporters only.
               li <strong>"Become a patron"</strong> button was installed. Thank you very much.
               li A bookmark edit link has been added to the <strong>search result</strong> list.
+              li Pagination has been added to the history list page.
           
           #v090.release-notes__content.mt-5
             h2 2020/02/22（v0.9.0）
