--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
 <%= render "shared/flash" %>
 
 <div class="row justify-content-center">
-  <div class="col-md-5 mt-4">
+  <div class="col-md-5 mt-4" style="max-width:472px">
     <h2><%= yield(:title) %></h2>
 
     <div class="oauth-login text-center">
