--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,19 @@
-<p>Welcome <%= @email %>!</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <title>Welcome <%= @email %>!</title>
+  </head>
+  <body>
+    <div style="background-color: #343a40; position: relative; padding: 0.5rem 1.5rem;">
+      <a href="<%= root_url %>" style="color: #fff; display: inline-block; padding-top: 0.3125rem; padding-bottom: 0.3125rem; margin-right: 1rem; font-size: 1.25rem; line-height: inherit; text-decoration: none; white-space: nowrap;">HippoMarks
+      </a>
+    </div>
 
-<p>You can confirm your account email through the link below:</p>
-
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+    <div style="border: solid 2px #343a40; padding: 30px; font-size: 1.0rem">
+      <h3 style="font-weight: 500; margin-top: 0;">Welcome <%= @email %>!</h3>
+      <p>You can confirm your account email through the link below:</p>
+      <p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token), style: 'display: inline-block; background-color: #007bff; padding: 10px; color: #fff; border-radius: 5px; text-decoration: none;' %></p>
+    </div>
+  </body>
+</html>
