Change: アクセスしたときのフックで画像類なかったら取ってくる処理追加。

--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -50,10 +50,12 @@
             h3 Updated
             ul
               li <strong>Login: </strong>Added social login function. However, patreon login may be deleted. Please note that if you have created a patreon account with social login, you will not be able to login with a patreon account on this site.
-              li <strong>Take capture: </strong>Limited the ability to capture site captures to supporters only.
+              li <strong>Take capture: </strong>Limited the ability to get site captures to supporters only.
               li <strong>"Become a patron"</strong> button was installed. Thank you very much.
               li A bookmark edit link has been added to the <strong>search result</strong> list.
               li Pagination has been added to the history list page.
+              li If there is no favicon and capture, add the fetching Job. (Limited to supporters)
+              li Minor corrections.
           
           #v090.release-notes__content.mt-5
             h2 2020/02/22（v0.9.0）
