Change: リリースノート更新

--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -14,6 +14,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v0101" 2020/03/1（v0.10.1）
+              li
                 a href="#v0100" 2020/02/29（v0.10.0）
               li
                 a href="#v090" 2020/02/22（v0.9.0）
@@ -44,7 +46,14 @@
               li
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
-          #v0100.release-notes__content.mt-0
+          #v0101.release-notes__content.mt-0
+            h2 2020/03/1（v0.10.1）
+            p Has been updated.
+            h3 Fixed
+            ul
+              li Addressed an issue where supporter-only features were not working properly.
+
+          #v0100.release-notes__content.mt-5
             h2 2020/02/29（v0.10.0）
             p Has been updated.
             h3 Updated
