--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -14,6 +14,8 @@
           aside.release-notes__side
             ul
               li
+                a href="#v0102" 2020/07/15（v0.10.2）
+              li
                 a href="#v0101" 2020/03/1（v0.10.1）
               li
                 a href="#v0100" 2020/02/29（v0.10.0）
@@ -47,6 +49,13 @@
                 a href="#v030" 2019/11/05（v0.3.0）
         .col-9
           #v0101.release-notes__content.mt-0
+            h2 2020/07/15（v0.10.2）
+            p Has been updated.
+            h3 Fixed
+            ul
+              li Minor corrections.
+          
+          #v0101.release-notes__content.mt-5
             h2 2020/03/1（v0.10.1）
             p Has been updated.
             h3 Fixed
