--- a/app/views/home/release_notes.html.slim
+++ b/app/views/home/release_notes.html.slim
@@ -51,6 +51,9 @@
           #v0101.release-notes__content.mt-0
             h2 2020/07/15（v0.10.2）
             p Has been updated.
+            h3 Updated
+            ul
+              li Cancel supporter-only features.
             h3 Fixed
             ul
               li Minor corrections.
